# gito

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: get_upstream.rs  main.rs
