[package]
name = "gito"
version = "0.1.2"
edition = "2021"
description = "A tool to expand the ability of git"
authors = ["HomyeeKing <HomyeeKing@gmail.com>"]
repository = "https://github.com/HomyeeKing/gito"
homepage = "https://github.com/HomyeeKing/gito"
keywords = ["git", "cli"]
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
serde_json = "1.0.91"
colored = "2.0.0"
